@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2010-03-04 15:47
+// This file was generated on 2010-04-13 00:23
 
 $extensionPath = t3lib_extMgm::extPath('oelib');
 return array(
@@ -26,6 +26,7 @@ return array(
 	'tx_oelib_session' => $extensionPath . 'class.tx_oelib_Session.php',
 	'tx_oelib_template' => $extensionPath . 'class.tx_oelib_Template.php',
 	'tx_oelib_templateregistry' => $extensionPath . 'class.tx_oelib_TemplateRegistry.php',
+	'tx_oelib_testingframeworkcleanup' => $extensionPath . 'class.tx_oelib_TestingFrameworkCleanup.php',
 	'tx_oelib_timer' => $extensionPath . 'class.tx_oelib_Timer.php',
 	'tx_oelib_translator' => $extensionPath . 'class.tx_oelib_Translator.php',
 	'tx_oelib_translatorregistry' => $extensionPath . 'class.tx_oelib_TranslatorRegistry.php',
